test/e2e/testdata/httproute-https-listener-detect-misdirected-requests.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: same-namespace-with-https-listener
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
    - name: https-with-hostname
      port: 443
      hostname: second-example.org
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
    - name: https-with-wildcard-hostname
      port: 443
      hostname: "*.wildcard.org"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
    - name: https-with-hostname-matching-wildcard
      port: 443
      hostname: "fourth-example.wildcard.org"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
      sectionName: https
  hostnames:
    - example.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /detect-misdirected-requests
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
      sectionName: https-with-hostname
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /detect-misdirected-requests
      backendRefs:
        - name: infra-backend-v2
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
      sectionName: https-with-wildcard-hostname
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /detect-misdirected-requests
      backendRefs:
        - name: infra-backend-v3
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-4
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
      sectionName: https-with-hostname-matching-wildcard
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /detect-misdirected-requests
      backendRefs:
        - name: infra-backend-v1
          port: 8080
